check in dataflow start, stop failure simulation